# icocvt

./: README.md  generate.bat
prj/: CMakeBuild.bat  CMakeLists.txt  cv_ico.h  cvtico.cpp
